crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__when_with_records_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "when x is\n    { y } -> 2\n    { z, w } -> 4\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginWhen
            Ident=>LowerIdent@1
            InlineKwIs=>KwIs@2
            (BeginPatternRecord=>Comma@10
                Ident=>LowerIdent@4
                PatternAny=>CloseCurly@5
            EndPatternRecord)
            InlineWhenArrow=>OpArrow@6
            Num=>IntBase10@7
            (BeginPatternRecord=>?broken?@18
                Ident=>LowerIdent@9
                PatternAny=>Comma@10
                Ident=>LowerIdent@11
                PatternAny=>CloseCurly@12
            EndPatternRecord)
            InlineWhenArrow=>OpArrow@13
            Num=>IntBase10@14
        EndWhen)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
When(Ident("x"), [PatternRecord([("y", PatternAny)]), IntBase10("2"), PatternRecord([("z", PatternAny), ("w", PatternAny)]), IntBase10("4")])

[=== formatted below ===]

